Group by directory don't work in main playlist

It was just not implemented and had a FIXME comment.

BUG: 265415
FIXED-IN: 2.8